--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     <title>Practicas Git</title>
 </head>
 <body>
-    <main class="container">
-        <div class="caja1">CAJA1</div>
-        <div class="caja2">CAJA2</div>
-        
-    </main>
-    
+    <h2>Oh gloria inmarcesible 
+        Oh júbilo inmortal 
+        En surcos de dolores 
+        El bien germina ya. 
+        </h2>
+        <h3>
+            Cesó la horrible noche 
+La libertad sublime 
+Derrama las auroras 
+De su invencible luz. 
+La humanidad entera, 
+Que entre cadenas gime, 
+Comprende las palabras 
+Del que murió en la cruz 
+        </h3>
 </body>
 </html>
