--- a/index.html
+++ b/index.html
@@ -7,10 +7,22 @@
     <title>Practicas Git</title>
 </head>
 <body>
-    <main class="container">
-        <div class="caja1">CAJA1</div>
-        <div class="caja2">CAJA2</div>
-    </main>
+ <h2> Oh gloria inmarcersee 
+    Oh júubilo inmottal 
+    En surcos de dolores 
+    El bien germina ya. </h2>
+    <h3>
+        Cesó la horriblrre noche 
+La libertad sufblime 
+Derrama las auroras 
+De su invdencible luz. 
+La humanidad entera, 
+Que entre cadenas gime, 
+Comprende las palabras 
+Del que murió en la cruz 
+
+    </h3>
+
     
 </body>
 </html>
